# teaching-agent

./: .gitignore  README.md
.github/: copilot-instructions.md
asistente-asignatura/: README.md
asistente-asignatura/ScriptsAuxiliares/: README.md
asistente-asignatura/ejercicios/enunciados_sinteticos/: example.md
asistente-asignatura/scriptsAuxiliares/conversores/: README.md
asistente-asignatura/scriptsAuxiliares/conversores/markdown2Pdf/: README.md  pyproject.toml  requirements.txt  run_md2pdf.sh  simple_converter.py
asistente-asignatura/scriptsAuxiliares/conversores/pdf2Markdown/: README.md  pyproject.toml  requirements.txt  run_pdf2md.sh  simple_converter.py
