[tool.poetry]
name = "markdown2pdf-simple"
version = "1.0.0"
description = "Conversor sencillo de Markdown a PDF para el proyecto teaching-agent"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
beautifulsoup4 = ">=4.12"
markdown = ">=3.4"
pygments = ">=2.15"
weasyprint = ">=58.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"

[tool.poetry.scripts]
md2pdf = "simple_converter:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
