[tool.poetry]
name = "markdown2pdf-simple"
package-mode = false
version = "1.1.0"
description = "Conversor de Markdown del proyecto teaching-agent usando Pandoc"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
weasyprint = ">=59.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"

[tool.poetry.scripts]
md2pdf = "simple_converter:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
